--- a/todo_app/lib/todo_app_web/templates/tarefa/new.html.eex
+++ b/todo_app/lib/todo_app_web/templates/tarefa/new.html.eex
@@ -1,8 +1,10 @@
 <%= form_for @changeset, Routes.tarefa_path(@conn, :create), fn f -> %>
     <div class="form group">
         <%= text_input f, :titulo, placeholder: "titulo", class: "form control" %>
-        <%= select f, :pronta, ["sim", "não"], class: "form control", style: "display: block", 
+        <%= error_tag f, :titulo%>
+        <%= select f, :pronta, [true, false], class: "form control", style: "display: block", 
             prompt: "A tarefa está pronta?" %>
+        <%= error_tag f, :pronta%>
     </div>
     <%= submit "Criar tarefa", class: "btn btn-primary"%>
 <% end %>
