Listando dados do banco

--- a/todo_app/lib/todo_app_web/templates/tarefa/index.html.eex
+++ b/todo_app/lib/todo_app_web/templates/tarefa/index.html.eex
@@ -1,1 +1,8 @@
-Lista de tarefas
+<h1>Lista de Tarefas</h1>
+<br/>
+<ul class="collection">
+<%= for tarefa <- @tarefas do %>
+   <li class="collection-item"> <%= gettext "Tarefa: %{tarefa} - Status: %{pronta}", 
+      tarefa: tarefa.titulo, pronta: tarefa.pronta %> </li>
+<% end %>
+</ul>
