--- a/todo_app/lib/todo_app_web/templates/layout/app.html.eex
+++ b/todo_app/lib/todo_app_web/templates/layout/app.html.eex
@@ -18,6 +18,9 @@
           <ul id="nav-mobile" class="right hide-on-med-and-down">
           <%= if @conn.assigns[:user] do %>
           <li>
+             <%= gettext "Bem vindo: %{nome} | ", nome: @conn.assigns.user.nome %>
+          </li>
+          <li>
             <%= link "Logout", to: Routes.auth_path(@conn, :logout, "github") %>
           </li>
           <%= else %>
